fix(Text): rename 'ellipsis' to 'truncate'
issue -  #1143

--- a/src/components/Text/Text.css
+++ b/src/components/Text/Text.css
@@ -250,7 +250,7 @@
     }
   }
 
-  &_ellipsis {
+  &_truncate {
     overflow: hidden;
     max-width: 100%;
     white-space: nowrap;
